продолжаю наводить порядок

--- a/2whitenoise2/UserSettings/Search.settings
+++ b/2whitenoise2/UserSettings/Search.settings
@@ -8,7 +8,7 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.5A656512" = "ref=\"Assets/DefaultVolumeProfile.asset\""
+	"last_search.5A656512" = "ref=\"Assets/Render/PC_High.asset\""
 	"OpenInspectorPreview.5A656512" = "0"
 	"currentGroup.5A656512" = null
 }
